exercises/4.7/solution/clients.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-ok
  namespace: net47
  labels:
    app: trusted
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: client-no
  namespace: net47
  labels:
    app: untrusted
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sleep", "3600"]
